--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/Redhatfour1/portfolio",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.2",
+    "express-request-proxy": "^2.0.0",
     "pg": "^6.2.2"
   }
 }
